# anon-router

./: .env.example  .gitignore  .railwayignore  AGENTS.md  CLI.md  Dockerfile  MAINNET.md  PRIVACY.md  README.md  REVIEW.md  VERIFICATION.md  admin.py  anthropic_proxy.py  cli.py  demo_m4b.py  e2e_verify.py  ec.py  mint.py  onchain.py  provider_settle.py  pyproject.toml  railway.json  requirements-client.txt  requirements.txt  run_e2e.sh  serve.py  serve_ecash.py  server.py  start.sh  state.db-shm  state.db-wal  store.py  wallet.py  watcher.py
confetti/: README.md  __init__.py  chain.py  channel.py  hashes.py  merkle.py  relation.py  sp1.py  wire.py  wots.py
contracts/: README.md  foundry.toml  remappings.txt
contracts/lib/forge-std/.github/workflows/: ci.yml
contracts/script/: Deploy.s.sol
contracts/src/: ConfettiChannels.sol  CreditVault.sol  IVerifier.sol  MockVerifier.sol  SP1PayVerifier.sol
contracts/test/: ConfettiChannels.t.sol  CreditVault.t.sol  SP1PayVerifier.t.sol
contracts/test/fixtures/: rpay-groth16.json  sp1-canonical-groth16.json
lean/: ConfettiContract.lean  lake-manifest.json  lakefile.lean
research/: design-vs-code-gap-brief.md  funding-flow-spec.md  goal-vs-implementation-brief.md  kimi-review-confetti.md  m4b-fable-review-and-design.md  m4b-real-groth16.md  mvp-fix-review-brief.md  mvp-fix-review-round3.md  mvp-fix-review-round4.md  mvp-fix-review-round5.md  mvp-fix-review-round6.md  mvp-fix-review-round7.md  mvp-fix-review-round8.md  mvp-fix-review-round9.md  mvp-unlinkability-brief.md  phase0-proving-benchmark.md  prod-e2e-verify-brief.md  ship-verify-brief.md  verity-confetti.md
research/m4b-groth16/: Cargo.toml  fixture.json  groth16-fixture.json  make_fixture.py
research/m4b-groth16/program/: Cargo.toml
research/m4b-groth16/program/src/: main.rs
research/m4b-groth16/script/: Cargo.toml
scripts/: gen_signed_fixture.py
tests/: e2e_full.py  e2e_money_safety.py  e2e_privacy.py  e2e_proxy.py  e2e_review_fixes.py  e2e_unlinkability.py  test_confetti.py  test_sp1_prover.py
web/: app.js  chat.js  crypto.js  ecash.js  index.html  quickstart.html  test_deposit_errors.mjs  test_ecash_browser.mjs  usage.js
