[workspace]

[package]
version = "0.1.0"
name = "confetti-rpay-program"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "6.0.1" }
sha2 = "0.10.8"

[patch.crates-io]
# SP1 precompile-accelerated sha256
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
