[package]
version = "0.1.0"
name = "confetti-rpay-script"
edition = "2021"
default-run = "prove"

[[bin]]
name = "prove"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[build-dependencies]
sp1-build = { version = "6.0.1" }
