[package]
version = "0.1.0"
name = "confetti-rpay-script"
edition = "2021"
default-run = "prove"

[[bin]]
name = "prove"
path = "src/bin/main.rs"

[[bin]]
name = "rpay"
path = "src/bin/rpay.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking"] }
sp1-prover = "6.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bincode = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
sp1-build = { version = "6.0.1" }
